# ocrmypdf-paddleocr

./: CLAUDE.md  README.md  default.nix  pyproject.toml  setup.py  shell.nix
.python-shims/: opencv_contrib_python.py  premailer.py
.python-shims/opencv_contrib_python-4.10.0.84.dist-info/: METADATA
.python-shims/premailer-3.10.0.dist-info/: METADATA
src/ocrmypdf_paddleocr/: plugin.py
