[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrmypdf-paddleocr"
dynamic = ["version"]
description = "PaddleOCR plugin for OCRmyPDF"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ocr", "pdf", "paddleocr", "ocrmypdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "ocrmypdf>=14.0.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ocrmypdf-paddleocr"
Repository = "https://github.com/yourusername/ocrmypdf-paddleocr"
"Bug Tracker" = "https://github.com/yourusername/ocrmypdf-paddleocr/issues"

[project.entry-points.ocrmypdf]
paddleocr = "ocrmypdf_paddleocr.plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ocrmypdf_paddleocr/_version.py"
